# learning_ros2

./: README.md  bashrc.cfg
cpp_pkg/: CMakeLists.txt  package.xml
cpp_pkg/src/: class_node.cpp  complete_node.cpp  simple_node.cpp
cpp_templates_pkg/: CMakeLists.txt  package.xml
cpp_templates_pkg/src/: simple_class_node.cpp  simple_node.cpp
py_templates_pkg/: package.xml  setup.cfg  setup.py
python_pkg/: package.xml  setup.py
python_pkg/python_pkg/: class_node.py  complete_node.py  simple_node.py
